Add OPTIONS, PATH, and SUPPRESSION to the regression test.